mesh/gateway/envoy-res.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-route
spec:
  parentRefs:
    - name: envoy-gateway
  rules:
    - backendRefs:
        - name: test-service
          port: 8080
