mesh/gateway/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:

spec:
  hostnames:
    - so-ds-gateway-e0b12.edge-us-east.192.168.1.109.nip.io
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: streamx-gateway
      namespace: streamx-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: sx-edge-web-server-sink
          port: 8084
          weight: 1
      compressor:
        - type: Gzip
          gzip: {}
      filters:
        - type: CORS
          cors:
            allowOrigins:
              - "*"
            allowMethods:
              - "*"
            allowHeaders:
              - "*"
            exposeHeaders:
              - "*"
      matches:
        - path:
            type: PathPrefix
            value: /
